[package]
name = "phone"
version = "0.1.0"
authors = ["Naoaki Iwakiri <naokiri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.5.1"

[dependencies.async-std]
version = "1.4.0"
features = ["attributes"]